# snifferbuddy

./: .dockerignore  .gitignore  README.md  app.py  config.json  config.py  config.yaml  dockerfile  pyproject.toml  snifferbuddy.service
data/: sniffer_data.db  sniffer_data.duckdb  sniffer_data.sqlite
docs/: Snifferbuddy_firmware.md  Tasmota.md  build_guide.md  data_collection_guide.md  firmware_guide.md  snifferbuddy_docker.md  snifferbuddy_puck.md
enclosure/F360 files/: snifferbuddy_bottom v9.f3z  snifferbuddy_bottom.3mf  snifferbuddy_top v10.f3d
enclosure/SCD4X/: scd-40 ring.3mf
enclosure/mesh_files/: snifferbuddy_top.3mf
enclosure/rest of models/: SCD-40 v1.f3d  Wemos D1 mini v2.f3d  photoresistor v3.f3d  pipe_filter v3.f3d
examples/: get_readings.py  play_with_sniffer_data.py  sniffer_data.duckdb
notebooks/: mcp_client_explore.py
src/: __init__.py  app.py  appconfig.py  common.py  config.py  config.yaml  database_code.py  listener_code.py  logger_setup.py  logging_config.py  logging_config.yaml  mqtt_code.py  test.py
src/data/: sniffer_data.duckdb
tests/: conftest.py  test_config.py  test_database.py  test_db.duckdb  test_db.sqlite3  test_listener.py  test_mqtt_listener.py  test_sensor_readings.db
~/Documents/Projects/snifferbuddy/data/: sniffer_data.duckdb
