[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snifferbuddy"
version = "0.0.1"
dependencies = [
    "paho-mqtt",
    "pydantic",
    "duckdb",
    "pyyaml",
    "appdirs",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = [
    "tests*",
    "docs*",
    "enclosures*",
    "examples*",
    "logs*",
    "build*",
    "dist*",
    "*.egg-info",
]

[project.scripts]
snifferbuddy = "src.app:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]

[tool.setuptools.package-data]
src = ["*.yaml"]
